# melanoma-pytorch

./: .gitignore  README.md  data_analysis_colab (1).ipynb  data_analysis_colab.ipynb  flowers_pytorch.ipynb  pyproject.toml
model/: data.py  model.py
notebooks/: data_analysis.ipynb  pruning_cnn.ipynb  setting_up_kaggle_credentials.ipynb
notebooks/pruning_examples/: model.pth  optimizer.pth
scripts/: train_model.py
