[tool.poetry]
name = "melanoma-pytorch"
version = "0.1.0"
description = "Pytorch Hackathon Project"
authors = ["Richard Hausman <richard.hausman@thenotcompany.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
pandas = "^1.1.0"
numpy = "^1.19.1"
sklearn = "^0.0"
matplotlib = "^3.3.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
